# framboise-software

./: .gitignore  Makefile  README.md  main.cpp  meson.build
can_protocol/: meson.build  remote_call.c  remote_call.h  robotronik_protocol.c  robotronik_protocol.h
data/: framboise-brain.service  framboise-brain.service.in  interface.glade  meson.build
gui/: full_window.py  gui.cpp  gui.hpp  interface.glade
libraries/: logger.c  logger.h  meson.build
low_level/: can.c  uart.c
src/: main.cpp  meson.build
src/gui/: gui.cpp  gui.hpp
test-can/: Makefile  asser.c  asser.h  can.c  can.h  gas.c  gas.h  gpio.c  gpio.h  logger.h  main.c  main.h  match.c  match.h  meson.build  server.c  server.h  start_can.sh  tof.c  tof.h  trucs.c  uart.c  uart.h
test-can/can/: remote_call.c  remote_call.h  robotronik_protocol.c  robotronik_protocol.h
worker/: worker.cpp  worker.hpp
